@@ -24,6 +24,7 @@ class Pdb(ClewnTestCase):
     def __init__(self, *args, **kwds):
         ClewnTestCase.__init__(self, *args, **kwds)
         self.debugger = 'pdb'
+        self.netbeans_port = 3220
 
     def setUp(self):
         ClewnTestCase.setUp(self)
