@@ -4,7 +4,7 @@ News
 Pyclewn 2.0
 -----------
 
-.. January 21, 2015
+.. January 23, 2015
 
 Changes
 ^^^^^^^
@@ -40,7 +40,9 @@ New features
   program started with ``:Pyclewn`` to run in a terminal instead of as a
   daemon, and helps trouble shooting startup problems.
 
-* The ``Cballooneval`` command has been added.
+* The new ``Cballooneval`` command switches on/off the Vim balloon without
+  interfering with the pyclewn key mappings that rely on the 'ballooneval'
+  feature to be enabled.
 
 Bug fixes
 ^^^^^^^^^
@@ -58,6 +60,9 @@ Bug fixes
 
 * Fix the problem that changes made to the plugin global variables after the
   first invocation of ``:Pyclewn`` are ignored.
+
+* Pyclewn listens on '127.0.0.1' and each debugger type uses now a different
+  netbeans port number.
 
 Pyclewn 1.11
 ------------
